package com.friendlypoker.model;

public enum ClubRole {
    OWNER,
    ADMIN,
    MEMBER
}
